<resources>
    <string name="app_name">FirebaseService</string>
    <string name="Title">ยินดีต้อนรับเข้าสู้ระบบ</string>
    <string name="Title1">กรุณากรอกข้อมูล</string>
    <string name="Email">กรุณาใส่ e-mail ของคุณ</string>
    <string name="User">กรุณาใส่ User ของคุณ</string>
    <string name="password">กรุณาใส่ password ของคุณ</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="register">ลงทะเบียน</string>
</resources>
